<resources>
    <string name="app_name">EPF Invest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="epf">EPF</string>
    <string name="dob">Date of Birth:</string>
    <string name="age">Age:</string>
    <string name="account_balance">Account Balance:</string>
    <string name="basic_saving">Basic Saving:</string>
    <string name="investment">Investment:</string>
    <string name="calculate">Calculate</string>
    <string name="eligible">You are eligible.</string>
    <string name="not_eligible">Sorry, please work harder.</string>
    <string name="pick_date">Pick Date</string>
</resources>